--- a/src/main/resources/templates/joke-form..html
+++ b/src/main/resources/templates/joke-form..html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Joke</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+<div class="container">
+    <h2>Vertical (basic) form</h2>
+    <form action="#" th:action="@{/joke/view/add}" th:object="${joke}" method="post" >
+        <div class="form-group">
+            <label>Id:</label>
+            <input class="form-control" id="id" placeholder="Enter id" name="id" th:field="*{value.id}">
+        </div>
+        <div class="form-group">
+            <label>Joke:</label>
+            <input class="form-control" id="joke" placeholder="Enter joke" name="joke" th:field="*{value.joke}">
+        </div>
+        <button type="submit" class="btn btn-default">Save</button>
+    </form>
+</div>
 </body>
 </html>
